fix background on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,7 @@
 
 html {
   width: 100%;
-  height: 100%;
+  height: 100% !important;
   background: url(../images/bg.jpg) no-repeat bottom center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
